--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,41 @@
   <artifactId>BookStore</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+  <spring.version>4.0.5.RELEASE</spring.version>
+  <lombok.version>1.12.6</lombok.version>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun</groupId>
+      <artifactId>tools</artifactId>
+      <version>1.7.0</version>
+      <scope>system</scope>
+      <systemPath>${java.home}/../lib/tools.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+      <!--<scope>provided</scope>-->
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok-utils</artifactId>
+      <version>${lombok.version}</version>
+    </dependency>
+  </dependencies>
+
 
 </project>
