--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <scope>system</scope>
       <systemPath>${java.home}/../lib/tools.jar</systemPath>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.12.6</version>
+    </dependency>
   </dependencies>
 
 
